removed action for seller

--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -38,7 +38,7 @@
                     <div class="overlay-content ml-1 pl-1">
                         <p>{{t_lis[1]}} - {{name}}</p>
                         <p>{{t_lis[2]}} - {{phone_number}}</p>
-                        <p>{{t_lis[3]}} - {{t_lis[4]}}</p>
+                        <p>{{t_lis[3]}} - {{status}}</p>
                         <p>{{t_lis[5]}} - {{city}}, {{state}}</p>
                         <a href="{{url_for('profile')}}">{{t_lis[7]}}</a>
                     </div>
