added dropdown for selecting status

--- a/templates/set_password.html
+++ b/templates/set_password.html
@@ -66,6 +66,12 @@
           <select class="select-css" id ="state" name="city" required></select>
           <script language="javascript">print_state("sts");</script>
           <br>
+          <select name="status" id="status" class="select-css">
+            <option value="Farmer">Farmer</option>
+            <option value="Seller">Seller</option>
+            <option value="Farmer + Seller">Farmer + Seller</option>
+          </select>
+          <br>
           <div class="container-login100-form-btn">
             <button type="submit" class="login100-form-btn" name="password-button">{{password_list[3]}}</button>
           </div>
