added field for displaying status

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -59,6 +59,13 @@
                     </div>
 
                     <div class="wrap-input100" style="background-color:rgb(238, 231, 231);border-radius:20px;padding-bottom:7px;padding-top:7px;">
+                        <p name="name" style="position: relative; left:70px;font-size:large;font-family:Verdana, Geneva, Tahoma, sans-serif;">{{tstatus}}</p>
+                        <span class="symbol-input100">
+                            <i class="fa fa-user" aria-hidden="true"></i>
+                        </span>
+                    </div>
+
+                    <div class="wrap-input100" style="background-color:rgb(238, 231, 231);border-radius:20px;padding-bottom:7px;padding-top:7px;">
                         <p name="location" style="position: relative; left:70px;font-size:large;font-family:Verdana, Geneva, Tahoma, sans-serif;">{{city}}, {{state}}</p>
                         <span class="symbol-input100">
                             <i class="fa fa-map-marker" aria-hidden="true"></i>
