--- a/templates/shop_now.html
+++ b/templates/shop_now.html
@@ -25,18 +25,19 @@
         <!-- navbar started -->
         <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light shop" id="ftco-navbar">
             <div class="container navbar">
-                <a class="navbar-brand" href="home.html">The<span>F</span>armer</a>
+                <a class="navbar-brand" href="#">The<span>F</span>armer</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
                     aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="oi oi-menu"></span> Menu
                 </button>
                 <div class="collapse navbar-collapse" id="ftco-nav">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-                        <li class="nav-item"><a href="about.html" class="nav-link">weather</a></li>
-                        <li class="nav-item"><a href="work.html" class="nav-link">Work</a></li>
-                        <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-                        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+                        <li class="nav-item active"><a href="{{url_for('user_home_3')}}" class="nav-link">Home</a></li>
+                        <li class="nav-item"><a href="{{url_for('weather')}}" class="nav-link">weather</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Work</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
+
+                        <li class="nav-item"><a href="{{url_for('seller')}}" class="nav-link">{{b_text}}</a></li>
                     </ul>
                 </div>
             </div>
@@ -89,7 +90,7 @@
                         <button type="submit" class="btn btn-dark">Search</button>
                     </div>
                     <div class="myimage-2">
-                        <img src="../static/images/shop_now.jpg" alt="">
+                        <img src="https://adventures365.in/blog/wp-content/uploads/2016/03/Jal-Mahal-Jaipur.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -120,19 +121,18 @@
             </div>
             <div class="row featured__filter">
                 <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fresh-meat">
-                    <div class="featured__item">
-                        <div class="featured__item__pic set-bg" data-setbg="../static/images/featured/feature-1.jpg">
-                            <ul class="featured__item__pic__hover">
-                                <li class="active"><a href="#"><i class="fa fa-heart"></i></a></li>
-                                <li class="active"><a href="#"><i class="fa fa-retweet"></i></a></li>
-                                <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                            </ul>
+                    <a href="#" name="what">
+                        <div class="featured__item">
+                            
+                                <div class="featured__item__pic set-bg" data-setbg="../static/images/featured/feature-1.jpg">
+                                </div>
+                            
+                                <div class="featured__item__text">
+                                    <h6>Crab Pool Security</h6>
+                                    <h5>$30.00</h5>
+                                </div>
                         </div>
-                        <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
-                        </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 mix vegetables fastfood">
                     <div class="featured__item">
